--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
               <a class="nav-link js-scroll-trigger" href="#about">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Lugar</a>
+              <a class="nav-link js-scroll-trigger" href="#where">Lugar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Equipo y contacto</a>
+              <a class="nav-link js-scroll-trigger" href="#convocatory">Convocatoria</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#conducta">Código de Conducta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#team">Equipo y contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="ingles.html">English</a>
@@ -61,9 +64,9 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <img class="logo" src="img/ICLC_WEB_COLOR-01.png">
+              <img class="logo" src="img/ICLC-LOGO-TRANSPARENTE.png">
               <h1 class="brand-heading">ICLC 2019</h1>
-              <p class="intro-text">Conferencias Internacionales de live coding. Del 14 al 20 de Enero del 2019, Medialab Prado, Madrid.</p>
+              <p class="intro-text">Conferencias Internacionales de live coding.<br/> Del 14 al 20 de Enero del 2019, Medialab Prado, Madrid.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -73,7 +76,7 @@
       </div>
       <!-- imagen efectos -->
       <div style="width: 100%;">
-        <img class="img_effect fade-in" src="img/ICLC-LOGO-BLANCO-TRANSPARENTE.png">
+        <img class="img_effect fade-in" src="img/1211-nl-serreria-044.jpg">
       </div>
 
     </header>
@@ -117,7 +120,7 @@
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="download-section content-section text-center">
+    <section id="where" class="download-section content-section text-center">
       <div class="container">
         <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -137,22 +140,13 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="content-section text-center">
+    <section id="convocatory" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Equipo y contacto</h2>
+            <h2>Convocatoria</h2>
             <p>Para cualquier consulta no dude en ponerse en contacto con: </br> iclc2019 a livecodelab punto org</p>
-              <ul class="list-unstyled">
-                <li>Dirección general - <a href="http://laverbenaelectronica.tumblr.com/">Jesús Jara López</a></li>
-                <li>Co-dirección - <a href="http://linalab.com/">Lina Bautista</a></li>
-                <li>Co-dirección - <a href="https://hangar.org/en/ivan-paz/">Iván Paz</a></li>
-                <li>Coordinación artística - <a href="http://www.rukano.de/">Juan A. Romero</a></li>
-                <li>Coordinación académica - <a href="http://ixi-audio.net/enrike/">Enrike Hurtado</a></li>
-                <li>Asesoría de producción - <a href="http://in-sonora.org/">Maite Camacho</a></li>
-                <li>Imagen corporativa y web - <a href="#">Adrián Cano/Jana Domínguez</a></li>
-                <li>Asistencia y mediación - <a href="http://livecodemad.org/">Live Code Mad</a></li>
-              </ul>
+
           </div>
         </div>
       </div>
@@ -188,6 +182,28 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                 <p>Si usted tiene alguna pregunta o inquietud con respecto a este código de conducta, por favor acérquese a un miembro del equipo organizador (quienes estarán
                   claramente identificables durante la conferencia) o envíenos un correo electrónico iclc2019 a livecodemad punto org. Este código de conducta está inspirado en los
                   <a href="http://iclc.livecodenetwork.org/2017/codeOfConduct.html">códigos de conducta</a> de las ediciones anteriores. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="team" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Equipo y contacto</h2>
+            <p>Para cualquier consulta no dude en ponerse en contacto con: </br> iclc2019 a livecodelab punto org</p>
+              <ul class="list-unstyled">
+                <li>Dirección general - <a href="http://laverbenaelectronica.tumblr.com/">Jesús Jara López</a></li>
+                <li>Co-dirección - <a href="http://linalab.com/">Lina Bautista</a></li>
+                <li>Co-dirección - <a href="https://hangar.org/en/ivan-paz/">Iván Paz</a></li>
+                <li>Coordinación artística - <a href="http://www.rukano.de/">Juan A. Romero</a></li>
+                <li>Coordinación académica - <a href="http://ixi-audio.net/enrike/">Enrike Hurtado</a></li>
+                <li>Asesoría de producción - <a href="http://in-sonora.org/">Maite Camacho</a></li>
+                <li>Imagen corporativa y web - <a href="#">Adrián Cano/Jana Domínguez</a></li>
+                <li>Asistencia y mediación - <a href="http://livecodemad.org/">Live Code Mad</a></li>
+              </ul>
           </div>
         </div>
       </div>
