cambios formato css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
   <head>
 
@@ -66,7 +66,7 @@
             <div class="col-lg-8 mx-auto">
               <img class="logo" src="img/ICLC-LOGO-TRANSPARENTE.png">
               <h1 class="brand-heading">ICLC 2019</h1>
-              <p class="intro-text">Conferencias Internacionales de live coding. Del 16 al 18 de Enero del 2019, Medialab Prado, Madrid.</p>
+              <p class="intro-text">Conferencias Internacionales de live coding. <br/>Del 16 al 18 de Enero del 2019, Medialab Prado, Madrid.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -85,7 +85,7 @@
     <section id="about" class="content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-8 mx-auto iclc-justify">
             <h2>Sobre las conferencias</h2>
             <p>El live coding es una práctica que consiste en modificar algoritmos con un fin creativo, a tiempo real y para una audiencia presente de forma física o virtual. En la actualidad
               el live coding cuenta con una variada y rica comunidad de personas que exploran desde esta perspectiva diversos ámbitos de la creación artística como la música, la creación
@@ -123,11 +123,11 @@
     <section id="where" class="download-section content-section text-center">
       <div class="container">
         <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-8 mx-auto iclc-justify">
           <h2>Lugar</h2>
           <p>"<a href="https://www.youtube.com/watch?v=6WfG7CVFKiQ&t=94s">Madrid is fun</a>”... dijo nuestra ex-alcaldesa en su fallida apuesta por organizar las olimpiadas. Y, aunque a diferencia de ella consideramos que Madrid también es un lugar complejo, es cierto que compartimos la opinión de mucha gente al afirmar que nuestra ciudad ofrece espacios de cultura, encuentro y aprendizaje conviviendo con espacios para la diversión, la gastronomía y la fiesta.</p>
           <p>El Aeropuerto Adolfo Suárez-Madrid Barajas (código IATA: MAD) es la principal entrada a la ciudad. Cuenta con tres terminales T1, T2 y T4 (T4s). Dependiendo de a qué terminal llegan / de qué terminal salen, los visitantes tienen varias opciones para llegar desde el aeropuerto hasta el centro de la ciudad:</p>
-          <ul class="list-unstyled">
+          <ul>
             <li>En taxi desde las cuatro terminales cuesta entre 20€ y 30€ según las tarifas <a href="http://www.aeropuertomadrid-barajas.com/transportation/madrid-airport-bytaxi.htm">publicadas por el aeropuerto</a>. El servicio de taxi funciona en todas las terminales del aeropuerto.</li>
             <li><a href="https://www.esmadrid.com/en/airport-express?utm_referrer=https%3A%2F%2Fwww.google.es%2F">Bus (Airport Express)</a>. Este servicio funciona las 24 horas, tarda 40 minutos aproximadamente en llegar al aeropuerto (T1, T2 y T4), cuestan 5€ y pasa entre 15 (día) y 35 (noche) minutos. </li>
             <li><a href="http://www.aena.es/en/madrid-barajas-airport/underground.html">Metro</a>. Accesible desde T2 y T4, tarda una hora aproximadamente en llegar al centro de Madrid. El aeropuerto cobra un suplemento de 3€ para entrar y salir del aeropuerto usando el metro.
@@ -139,14 +139,54 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
     </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Convocatoria Section -->
     <section id="convocatory" class="content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Convocatoria</h2>
-            <p>Para cualquier consulta no dude en ponerse en contacto con: </br> iclc2019 a livecodelab punto org</p>
-
+          <div class="col-lg-8 mx-auto iclc-justify">
+            <h2>Convocatoria de artículos, performances, instalaciones y talleres</h2>
+            <p>El comité de organización local, el comité internacional y el Live Coding Research Network se
+              complacen en invitarle a contribuir a las
+              <a href="http://iclc.livecodenetwork.org/2019/">Conferencias Internacionales de Live Coding 2019</a> (ICLC 2019)
+              por medio de un artículo, una performance, una instalación o un taller dentro de las temáticas descritas
+              a continuación, así como participando en alguna de las dos Algoraves previstas para propuestas
+              audiovisuales más orientadas a la música electrónica de baile. </p>
+            <p>Esta edición de las conferencias tendrá lugar del 16 al 18 de Enero del 2019 en
+              <a href="http://medialab-prado.es/">Medialab Prado</a>
+              (Madrid) continuando con las ediciones anteriores celebradas en el
+              <a href="http://iclc.livecodenetwork.org/2017/">CMMAS </a>
+              de Morelia, México (2017), en la
+              <a href="http://iclc.livecodenetwork.org/2016/">Universidad McMaster </a>
+              en Canadá (2016) y en la
+              <a href="http://iclc.livecodenetwork.org/2015/">Universidad de Leeds </a>,
+              en el Reino Unido (2015).</p>
+             <h2>Temas</h2>
+             <p>Esta convocatoria está abierta a todos los temas relacionados con la práctica del live coding en continuidad
+               con las conferecias celebradas previamente. Se pueden encontrar una lista de temas propuestos en las
+               páginas web de las ediciones anteriores. En esta ocasión, nos gustaría poner especial énfasis en
+               aquellas propuestas que trabajen sobre la cultura libre, la enseñanza/aprendizaje del live coding y la
+               creación colaborativa en red. Las propuestas que desafíen estos temas serán bien
+               recibidas también. Debido a que esta es una conferencia internacional, las propuestas deberán ser
+               enviadas en inglés. En caso de que el requisito anterior no pueda cumplirse, contactar por
+               favor, con la organización a través de iclc2019 arroba livecodemad punto org para para buscar una alternativa de
+               participación en español. </p>
+               <h2>Fechas relevantes</h2>
+               <p> <ul>
+                   <li><a href="#">2 de Julio 2018</a>: Abre la convocatoria y el sistema de revisión por par doble ciego para subir las propuestas.</li>
+                   <li><a href="#">31 de Agosto 2018</a>: Fecha límite para entregar propuestas de performances, sesión en Algoraves y talleres.</li>
+                   <li><a href="#">10 de Septiembre 2018</a>: Fecha límite para entregar propuestas de papers/artículos.</li>
+                   <li><a href="#">5 de Noviembre 2018</a>: Notificación de aceptación.</li>
+                   <li><a href="#">19 de Noviembre 2018</a>: Inicia registro de asistentes.</li>
+                   <li><a href="#">16-18 de Enero 2019</a>: Días centrales de la conferencia.</li>
+                 </ul></p>
+               <h2>Formatos de participación</h2>
+               <p> <ul class="list-unstyled">
+                     <li>Artículo/Paper (2-10 páginas)</li>
+                     <li>Performance</li>
+                     <li>Sesión en Algorave</li>
+                     <li>Taller</li>
+                     <li>Instalación</li>
+                   </ul></p>
           </div>
         </div>
       </div>
@@ -157,7 +197,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
     <section id="conducta" class="download-section content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-8 mx-auto iclc-justify">
            <h2>Código de conducta</h2>
             <p>Con el fin de promover un espacio seguro, inclusivo y abierto, desde la organización del ICLC 2019 proponemos un código de conducta en continuidad con las
               anteriores conferencias de live coding. Invitamos a todas las personas asistentes a las conferencias y a las comunidades en torno a ella a trabajar por crear
@@ -167,7 +207,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
               otras personas ya sea por motivos culturales, educativos o personales. Si actúa o habla de una manera que alguien pueda considerar inapropiado, entonces es inapropiado
               para ese lugar, momento y persona. Si alguien le dice que lo que está haciendo le hace sentir incómodo/a, por favor deje de hacerlo o de decirlo. </p>
               <p>El acoso y otros comportamientos de exclusión no son bienvenidos en la conferencia. Estos también se incluyen: </p>
-              <ul class="list-unstyled">
+              <ul>
                 <li>actitudes o comentarios ofensivos relacionadas con el género, identidad y expresión de género, orientación sexual, discapacidad, apariencia física, tamaño corporal,
                   raza, religión;</li>
                 <li>intimidación deliberada, acoso o seguimiento;</li>
@@ -176,6 +216,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                 <li>contacto físico inapropiado y comentarios sexuales o sugestivos no deseados;</li>
                 <li>uso inapropiado de imágenes u otro material que otros puedan considerar ofensivo.</li>
               </ul>
+              <br />
               <p>Lo anterior se aplica para todas las presentaciones, actuaciones y talleres dentro la conferencia, publicaciones en medios sociales como Facebook o Twitter,
                 y para eventos fuera de la misma incluyendo eventos nocturnos. </p>
 
@@ -193,7 +234,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Equipo y contacto</h2>
-            <p>Para cualquier consulta no dude en ponerse en contacto con: </br> iclc2019 a livecodelab punto org</p>
+            <p>Para cualquier consulta no dude en ponerse en contacto con: </br> iclc2019 arroba livecodelab punto org</p>
               <ul class="list-unstyled">
                 <li>Dirección general - <a href="http://laverbenaelectronica.tumblr.com/">Jesús Jara López</a></li>
                 <li>Co-dirección - <a href="http://linalab.com/">Lina Bautista</a></li>
