--- a/ingles.html
+++ b/ingles.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/grayscale.css" rel="stylesheet">
 
   </head>
 
@@ -42,10 +42,13 @@
               <a class="nav-link js-scroll-trigger" href="#download">Place</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Team and contact</a>
+              <a class="nav-link js-scroll-trigger" href="#convocatory">Open Call</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#conducta">Code of Conduct</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Team and contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="index.html">Spanish</a>
@@ -62,7 +65,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">ICLC 2019</h1>
-              <p class="intro-text">International Conference on Live Coding. From 14 to 20 of January 2019, Medialab Prado, Madrid.</p>
+              <p class="intro-text">International Conference on Live Coding. <br />From 16th to 18th of January 2019, Medialab Prado, Madrid.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -76,7 +79,7 @@
     <section id="about" class="content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-8 mx-auto iclc-justify">
             <h2>About the Conference</h2>
             <p>Live coding refers to the creation and modification of algorithms with a creative purpose in real time in the presence of a physical or virtual audience.
               The community is diverse and seeks to engage in a wide cross-section of artistic practices including but not limited to music, audiovisual creation, performance,
@@ -110,13 +113,13 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-8 mx-auto iclc-justify">
           <h2>Place</h2>
           <p>"<a href="https://www.youtube.com/watch?v=6WfG7CVFKiQ&t=94s">Madrid is fun</a>”... said our ex-mayor in her attempt to host the olympic games for 2020. Indeed! Madrid offers
             great places to relax, enjoy traditional gastronomy and party as well as being a unique space for culture, sharing and collaborative learning.</p>
           <p>The airport Adolfo Suárez-Madrid Barajas (MAD) is the main gateway to the city. It has 3 active Terminals: T1, T2 and T4 (with a small satellite T4s).
             Depending on what Terminal visitors arrives to/leaves from, there are several options to get from/to the airport to/from the city</p>
-          <ul class="list-unstyled">
+          <ul>
             <li>Taxi service reaches every Terminal and costs between 20€ to 30€ according to the <a href="http://www.aeropuertomadrid-barajas.com/transportation/madrid-airport-bytaxi.htm">information published on the airport</a>.</li>
             <li><a href="https://www.esmadrid.com/en/airport-express?utm_referrer=https%3A%2F%2Fwww.google.es%2F">Bus (Airport Express)</a>. This service works 24/7. It takes 40 minutes
               approximately to reach the airport (T1, T2, T4) from city center. It costs 5€ and runs every 15 min. during the day and 35 min. at night. There are only a few stops where a
@@ -133,6 +136,80 @@
           <p>Madrid offers a vast choice of Hostels, Hotels, and B&Bs which are published in the most notorious hotel booking websites.</p>
       </div>
     </div>
+    </section>
+
+
+    <!-- Convocatoria Section -->
+    <section id="convocatory" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto iclc-justify">
+            <h2>Call for papers, performances, installations and workshops</h2>
+            <p>On behalf of the steering committee and the Live Coding Research Network, the organizing committee is pleased
+              to invite submission of proposed contributions to the
+                <a href="http://iclc.livecodenetwork.org/2019/">International Conference on Live Coding</a> (ICLC 2019) in the
+              form of papers, performances, installations or workshops about the themes described later or with contributions
+              to the Algoraves planed during the Conference for proposals more oriented to electronic dance music/performances.</p>
+            <p>This edition of ICLC will take place at <a href="http://medialab-prado.es/">Medialab Prado</a> (Madrid)
+              from the 16th to 18th of January 2019. It follows previous editions at
+              <a href="http://iclc.livecodenetwork.org/2017/">CMMAS</a>, Morelia, Mexico (2017), at
+              <a href="http://iclc.livecodenetwork.org/2016/">McMaster University</a>, Ontario, Canada (2016) and the inaugural edition
+              held in <a href="http://iclc.livecodenetwork.org/2015/">University of Leeds</a>, UK (2015).</p>
+             <h2>Themes</h2>
+             <p>ICLC 2019 is open to any topic related to Live Coding and it aims to offer continuity with previous ICLC research themes.
+               For a list of proposed themes, please visit previous ICLC sites. For this edition, we particularly encourage contributions
+               related to free culture, teaching and learning live coding and collaborative or networked creation. Contributions that
+               challenge the proposed themes are also welcome. </p>
+              <h2>Timeline</h2>
+              <p>
+                <ul>
+                   <li><a href="#">2nd of July 2018</a>: Call for submissions and peer review system opens.</li>
+                   <li><a href="#">31st of August 2018</a>: Deadline for submission of performances, installations and workshops.</li>
+                   <li><a href="#">10th of September 2018</a>: Deadline for submission of papers.</li>
+                   <li><a href="#">5th  of November 2018</a>: Notification of Acceptance.</li>
+                   <li><a href="#">19th of November 2018</a>: Conference Registration opens.</li>
+                   <li><a href="#">16th-18th of January 2019</a>: Conference days.</li>
+                 </ul>
+               </p>
+               <h2>Contribution types</h2>
+               <p> <ul class="list-unstyled">
+                     <li>Papers (2-10 pages)</li>
+                     <li>Performances</li>
+                     <li>Algorave sessions</li>
+                     <li>Workshops</li>
+                     <li>Installations</li>
+                   </ul></p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Codigo de conducta -->
+    <section id="conducta" class="download-section content-section text-center">
+      <div class="container">
+        <div class="row">
+        <div class="col-lg-8 mx-auto iclc-justify">
+           <h2>Code of Conduct</h2>
+            <p>With the aim of promoting a safe, inclusive and open space at ICLC 2019, the organizing team propose a code of conduct in continuity with the prior conferences on live coding. We invite everyone attending the conference and the communities around it to work for a respectful and positive environment. As organizers we work hard to preserve the warm and open atmosphere that characterize pasts live coding conferences.</p>
+            <p>As participants, please be mindful of the effect your words and actions may have on others and that your boundaries may not be the same as the boundaries of others for either cultural, education or personal reasons. If you act or speak in a way that someone finds inappropriate, it’s inappropriate to that time, place and/or person. If somebody tells you that you are making them uncomfortable, please stop doing so.</p>
+              <p>Harassment, and other exclusionary behaviour are not welcome at the conference. Harassment includes:</p>
+              <ul>
+                <li>offensive verbal comments or attitudes related to gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, religion;</li>
+                <li>deliberate intimidation, stalking or following</li>
+                <li>discriminatory jokes and language;</li>
+                <li>sustained disruption of events, talks or performances;</li>
+                <li>inappropriate physical contact, and unwelcome sexual or suggestive remarks;</li>
+                <li>inappropriate use of imagery or other material which others may find offensive.</li>
+              </ul>
+              <br />
+              <p>This applies to all events and venues of the conference whether they be talks, performances, late-night events, at the bar, or through Facebook or Twitter or other online media.</p>
+
+                <p>If you have any concerns please find a member of the organising team (they'll be clearly identifiable during the conference) and let them know, or otherwise send us an email to: iclc2019 at livecodemad dot org.
+                  This text is inspired by the
+                  <a href="http://iclc.livecodenetwork.org/2017/codeOfConduct.html">code of conduct</a> used in prior international conferences on live coding. </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Contact Section -->
@@ -152,34 +229,6 @@
                 <li>Identity & Web - <a href="#">Adrián Cano/Jana Domínguez</a></li>
                 <li>Assistance - <a href="http://livecodemad.org/">Live Code Mad</a></li>
               </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- About Codigo de conducta -->
-    <section id="conducta" class="download-section content-section text-center">
-      <div class="container">
-        <div class="row">
-        <div class="col-lg-8 mx-auto">
-           <h2>Code of Conduct</h2>
-            <p>With the aim of promoting a safe, inclusive and open space at ICLC 2019, the organizing team propose a code of conduct in continuity with the prior conferences on live coding. We invite everyone attending the conference and the communities around it to work for a respectful and positive environment. As organizers we work hard to preserve the warm and open atmosphere that characterize pasts live coding conferences.</p>
-            <p>As participants, please be mindful of the effect your words and actions may have on others and that your boundaries may not be the same as the boundaries of others for either cultural, education or personal reasons. If you act or speak in a way that someone finds inappropriate, it’s inappropriate to that time, place and/or person. If somebody tells you that you are making them uncomfortable, please stop doing so.</p>
-              <p>Harassment, and other exclusionary behaviour are not welcome at the conference. Harassment includes:</p>
-              <ul class="list-unstyled">
-                <li>offensive verbal comments or attitudes related to gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, religion;</li>
-                <li>deliberate intimidation, stalking or following</li>
-                <li>discriminatory jokes and language;</li>
-                <li>sustained disruption of events, talks or performances;</li>
-                <li>inappropriate physical contact, and unwelcome sexual or suggestive remarks;</li>
-                <li>inappropriate use of imagery or other material which others may find offensive.</li>
-              </ul>
-              <p>This applies to all events and venues of the conference whether they be talks, performances, late-night events, at the bar, or through Facebook or Twitter or other online media.</p>
-
-                <p>If you have any concerns please find a member of the organising team (they'll be clearly identifiable during the conference) and let them know, or otherwise send us an email to: iclc2019 at livecodemad dot org.
-                  This text is inspired by the
-                  <a href="http://iclc.livecodenetwork.org/2017/codeOfConduct.html">code of conduct</a> used in prior international conferences on live coding. </p>
           </div>
         </div>
       </div>
