cambios imagenes y css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <p>Para más información sobre el tema remitimos a la página de
               <a href="https://toplap.org/">TOPLAP</a> así como las páginas de las
               <a href="http://iclc.livecodenetwork.org/">ediciones</a> anteriores de estas conferencias.
-              La cuarta ICLC tendrá lugar del 14 al 20 de Enero del 2019 en Madrid. Su sede principal será
+              La cuarta ICLC tendrá lugar del 16 al 18 de Enero del 2019 en Madrid. Su sede principal será
               <a href="https://www.medialab-prado.es/">Medialab-Prado</a> aunque contará con el apoyo de otros agentes
               culturales e instituciones de la ciudad de Madrid.</p>
               <p>Durante la conferencia tendrán lugar presentaciones, performances, conciertos, talleres y actividades en torno al live coding con el objetivo de dar a conocer
@@ -120,10 +120,10 @@
     </section>
 
     <!-- Download Section -->
-    <section id="where" class="download-section content-section text-center">
+    <section id="where" class="where-section content-section text-center">
       <div class="container">
         <div class="row">
-        <div class="col-lg-8 mx-auto iclc-justify">
+        <div class="col-lg-8 mx-auto iclc-justify iclc-black">
           <h2>Lugar</h2>
           <p>"<a href="https://www.youtube.com/watch?v=6WfG7CVFKiQ&t=94s">Madrid is fun</a>”... dijo nuestra ex-alcaldesa en su fallida apuesta por organizar las olimpiadas. Y, aunque a diferencia de ella consideramos que Madrid también es un lugar complejo, es cierto que compartimos la opinión de mucha gente al afirmar que nuestra ciudad ofrece espacios de cultura, encuentro y aprendizaje conviviendo con espacios para la diversión, la gastronomía y la fiesta.</p>
           <p>El Aeropuerto Adolfo Suárez-Madrid Barajas (código IATA: MAD) es la principal entrada a la ciudad. Cuenta con tres terminales T1, T2 y T4 (T4s). Dependiendo de a qué terminal llegan / de qué terminal salen, los visitantes tienen varias opciones para llegar desde el aeropuerto hasta el centro de la ciudad:</p>
@@ -194,10 +194,10 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
 
 
     <!-- About Codigo de conducta -->
-    <section id="conducta" class="download-section content-section text-center">
+    <section id="conducta" class="codigo-section content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto iclc-justify">
+          <div class="col-lg-8 mx-auto iclc-justify iclc-black">
            <h2>Código de conducta</h2>
             <p>Con el fin de promover un espacio seguro, inclusivo y abierto, desde la organización del ICLC 2019 proponemos un código de conducta en continuidad con las
               anteriores conferencias de live coding. Invitamos a todas las personas asistentes a las conferencias y a las comunidades en torno a ella a trabajar por crear
@@ -250,7 +250,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
       </div>
     </section>
 
-    <!-- Map Section -->
+    <!-- Map Section
     <div id="map">
       <script>
       function initMap() {
@@ -265,7 +265,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
         });
       }
     </script>
-    </div>
+    </div> -->
 
     <!-- Footer -->
     <footer>
