--- a/ingles.html
+++ b/ingles.html
@@ -21,6 +21,9 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 
+    <!-- FAVICON -->
+    <link rel="icon" href="img/favicon_color.ico" type="image/x-icon">
+
   </head>
 
   <body id="page-top">
