--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                enviadas en inglés. En caso de que el requisito anterior no pueda cumplirse, contactar por
                favor, con la organización a través de iclc2019 arroba livecodemad punto org para para buscar una alternativa de
                participación en español. </p>
-            <p>En caso de existir necesidades especiales de accesibilidad a las Conferencias, por favor, ponerse en contacto 
+            <p>En caso de existir necesidades especiales de accesibilidad a las Conferencias, por favor, ponerse en contacto
               con la organización a través de la dirección de correo electrónico iclc2019 arroba livecodemad punto org.</p>
                <h2>Fechas relevantes</h2>
                <p> <ul>
@@ -255,22 +255,38 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
       </div>
     </section>
 
-    <!-- Map Section
+    <!-- Map Section -->
     <div id="map">
       <script>
       function initMap() {
-        var uluru = {lat:40.4105268, lng: -3.6959795};
+        var uluru = {lat:40.4105268, lng: -3.6937908};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
+          zoom: 15,
+          styles: [
+            {
+              stylers: [
+                { saturation: -90 },
+                { lightness: 50 }
+              ]
+            },
+          ],
           center: uluru
         });
         var marker = new google.maps.Marker({
           position: uluru,
-          map: map
+          map: map,
+          title: "Medialab-Prado",
+          url: "https://www.google.es/maps/place/Medialab-Prado/@40.4105268,-3.6937908,15z/data=!4m5!3m4!1s0x0:0xd69ac9ed8a94df3d!8m2!3d40.4105268!4d-3.6937908"
         });
+
+        google.maps.event.addListener(marker, 'click', function() {
+            // window.location.href = this.url;
+            $('<a href="'+ this.url +'" target="_blank">External Link</a>')[0].click();
+        });
+
       }
     </script>
-    </div> -->
+    </div>
 
     <!-- Footer -->
     <footer>
