--- a/ingles.html
+++ b/ingles.html
@@ -168,7 +168,7 @@
                For a list of proposed themes, please visit previous ICLC sites. For this edition, we particularly encourage contributions
                related to free culture, teaching and learning live coding and collaborative or networked creation. Contributions that
                challenge the proposed themes are also welcome. Submissions are expected in the English language.</p>
-            <p>If there are special needs regarding the accesibility of the confernence, please contact the organization 
+            <p>If there are special needs regarding the accesibility of the confernence, please contact the organization
               team at iclc2019 at livecodemad dot org.</p>
               <h2>Timeline</h2>
               <p>
@@ -244,22 +244,38 @@
       </div>
     </section>
 
-    <!--
+    <!-- Map Section -->
     <div id="map">
       <script>
       function initMap() {
-        var uluru = {lat:40.4105268, lng: -3.6959795};
+        var uluru = {lat:40.4105268, lng: -3.6937908};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
+          zoom: 15,
+          styles: [
+            {
+              stylers: [
+                { saturation: -90 },
+                { lightness: 50 }
+              ]
+            },
+          ],
           center: uluru
         });
         var marker = new google.maps.Marker({
           position: uluru,
-          map: map
+          map: map,
+          title: "Medialab-Prado",
+          url: "https://www.google.es/maps/place/Medialab-Prado/@40.4105268,-3.6937908,15z/data=!4m5!3m4!1s0x0:0xd69ac9ed8a94df3d!8m2!3d40.4105268!4d-3.6937908"
         });
+
+        google.maps.event.addListener(marker, 'click', function() {
+            // window.location.href = this.url;
+            $('<a href="'+ this.url +'" target="_blank">External Link</a>')[0].click();
+        });
+
       }
     </script>
-    </div>Map Section -->
+    </div>
 
     <!-- Footer -->
     <footer>
@@ -267,17 +283,13 @@
       </div>
     </footer>
 
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj40QSRbKRYiFLvBBPhtXivIbGFFihf9w&callback=initMap">
-    </script>
 
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
