--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
     </section>
 
     <!-- Map Section -->
+
     <div id="map">
       <script>
       function initMap() {
@@ -291,6 +292,8 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
     <!-- Footer -->
     <footer>
       <div class="container text-center">
+        <!-- ICLC 2019 Madrid | Medialab-Prado | LiveCodeMad -->
+        <a href="https://www.michaelbromley.co.uk/experiments/chromata/" target="_blank">Chromata.js by Michael Bromley</a>
       </div>
     </footer>
 
