--- a/ingles.html
+++ b/ingles.html
@@ -280,6 +280,8 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
+        <!-- ICLC 2019 Madrid | Medialab-Prado | LiveCodeMad -->
+        <a href="https://www.michaelbromley.co.uk/experiments/chromata/" target="_blank">Chromata.js by Michael Bromley</a>
       </div>
     </footer>
 
