cambios en la convocatoria

--- a/index.html
+++ b/index.html
@@ -165,11 +165,33 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
               en el Reino Unido (2015).</p>
              <h2>Temas</h2>
              <p>Esta convocatoria está abierta a todos los temas relacionados con la práctica del live coding en continuidad
-               con las conferecias celebradas previamente. Se pueden encontrar una lista de temas propuestos en las
-               páginas web de las ediciones anteriores. En esta ocasión, nos gustaría poner especial énfasis en
-               aquellas propuestas que trabajen sobre la cultura libre, la enseñanza/aprendizaje del live coding y la
-               creación colaborativa en red. Las propuestas que desafíen estos temas serán bien
-               recibidas también. Debido a que esta es una conferencia internacional, las propuestas deberán ser
+               con las conferecias celebradas previamente. Se pueden encontrar una <a href="http://iclc.livecodenetwork.org/2017/call.html">
+               lista de temas propuestos </a> en las páginas web de las ediciones anteriores. En esta ocasión, nos gustaría poner especial énfasis en
+               aquellas propuestas que trabajen sobre:
+               <ul>
+               <li>la cultura libre, como por ejemplo: 
+                 <i>software y hardware libre y abierto</i>; 
+                 <i>estética y filosofía diy/hacker en el live coding</i>; 
+                 <i>live coding más allá de los ordenadores</i>; o
+                 <i>perspectivas históricas de los lenguajes de programación para live coding</i>.
+               </li> 
+               <li>la enseñanza/aprendizaje del live coding, como por ejemplo:
+                 <i>diversidad en las comunidades de live coding</i>; 
+                 <i>live coding, inclusión y equidad</i>; 
+                 <i>live coding espacios públicos y privados</i>;
+                 <i>aprender y enseñar live coding</i>; o
+                 <i>live coding en comunidades autogestionadas</i>.
+               </li> 
+               <li>la creación colaborativa en red, como por ejemplo: 
+                 <i>creación colaborativa a través del live coding</i>; 
+                 <i>web/networked live coding</i>; 
+                 <i>live coding, movimiento y gestualidad</i>;
+                 <i>live coding y agentes autónomos</i>;
+                 <i>live coding en videojuegos</i>; o
+                 <i>realidad virtual/aumentada y live coding</i>.
+               </ul>
+               Las propuestas que desafíen estos temas serán bien recibidas también. 
+               Debido a que esta es una conferencia internacional, las propuestas deberán ser
                enviadas en inglés. En caso de que el requisito anterior no pueda cumplirse, contactar por
                favor, con la organización a través de iclc2019 arroba livecodemad punto org para para buscar una alternativa de
                participación en español. </p>
