cambios open call

--- a/index.html
+++ b/index.html
@@ -206,14 +206,25 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                    <li><a href="#">19 de Noviembre 2018</a>: Inicia registro de asistentes.</li>
                    <li><a href="#">16-18 de Enero 2019</a>: Días centrales de la conferencia.</li>
                  </ul></p>
-               <h2>Formatos de participación</h2>
-               <p> <ul class="list-unstyled">
-                     <li>Artículo/Paper (2-10 páginas)</li>
-                     <li>Performance</li>
-                     <li>Sesión en Algorave</li>
-                     <li>Taller</li>
-                     <li>Instalación</li>
-                   </ul></p>
+               <h3>PAPERS/ARTÍCULOS (2-10 páginas)</h3>
+               <p>Son bienvenidas las propuestas tanto de artículos largos como cortos o posters, presentaciones acompañadas 
+                 de una demo o proyectos realizados durante una investigación de doctorado. Para proponer un artículo para 
+                 la conferencia, enviar un borrador completo del artículo, un resumen condensado (100-150 palabras) y una 
+                 breve Biografía (100-150 palabras para cada contribuyente) a través del sistema de revisión por par doble 
+                 ciego en línea. Al escribir su artículo, utilice como guía, las plantillas oficiales proporcionadas a 
+                 continuación: 
+                 <>templates-iclc2019.zip Todas las propuestas de artículos deberán contar con citas que 
+                 referencien trabajos anteriores publicados en esta y otras conferencias, así como la aplicación de métodos 
+                 de investigación apropiados. Las actas de la conferencia serán publicadas con ISBN, y un número DOI por cada 
+                 artículo.</p>
+               <h3>PERFORMANCES</h3>
+               <p></p>
+               <h3>SESIONES DE ALGORAVE</h3>
+               <p></p>
+               <h3>TALLERES</h3>
+               <p></p>
+               <h3>INSTALACIONES</h3>
+               <p></p>
           </div>
         </div>
       </div>
